AUTO: Edit request added

--- a/projects/auto-requests/src/app/app.component.html
+++ b/projects/auto-requests/src/app/app.component.html
@@ -9,7 +9,9 @@
         <app-calendar [date]="date$ | async"
                       [selected]="selectedDate$ | async"
                       [requests]="calendarRequests$ | async"
-                      (select)="selectDate($event)">
+                      (select)="selectDate($event)"
+                      (periodChange)="periodChange($event)"
+                      (monthChange)="monthChange($event)">
         </app-calendar>
       </div>
 
