--- a/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
+++ b/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
@@ -1,5 +1,5 @@
 @side-width: 300px;
-@side-background-color: linear-gradient(#e3f2fd, white);
+@side-background-color: linear-gradient(#e3f2fd, rgba(235,246,253, 0.3));
 @subtitle-font-family: 'Open Sans Regular';
 @subtitle-font-size: 13px;
 @subtitle-color: #607d8b;
