--- a/projects/auto-requests/src/app/components/current-user/current-user.component.less
+++ b/projects/auto-requests/src/app/components/current-user/current-user.component.less
@@ -4,7 +4,7 @@
 @background-color-hover: rgba(176, 190, 197, 0.4);
 @initials-font-family: 'Open Sans Regular';
 @initials-font-size: 20px;
-@initials-color: #90A4AE;
+@initials-color: #546E7A;
 @expander-width: 20px;
 @expander-height: 20px;
 @icon-font-size: 14px;
@@ -18,7 +18,7 @@
   width: @width;
   height: @height;
   // background: @background-color;
-  border: 3px solid @background-color;
+  // border: 3px solid @background-color;
   border-radius: 50%;
   cursor: pointer;
 
