--- a/projects/auto-requests/src/styles.less
+++ b/projects/auto-requests/src/styles.less
@@ -6,6 +6,7 @@
 @import './app/styles/fonts';
 @import './app/styles/sign-in-dialog';
 @import './app/styles/snack-bar';
+@import './app/styles/user-menu';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
