--- a/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.html
+++ b/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.html
@@ -27,6 +27,8 @@
 
         <!-- Start: Инициатор -->
         <app-user-search class="pr-3"
+                         [label]="'Инициатор'"
+                         [hint]="'Заполните, если инициатор поездки не Вы'"
                          (select)="selectInitiator($event)"
                          (clear)="clearInitiator()">
         </app-user-search>
