--- a/projects/auto-requests/src/app/components/search/search.component.less
+++ b/projects/auto-requests/src/app/components/search/search.component.less
@@ -1,8 +1,25 @@
 @search-height: 45px;
 @search-background-color: #EEEEEE;
+
 @prefix-icon-width: 22px;
 @prefix-icon-height: 22px;
 @prefix-icon-color: #90A4AE;
+
+@filter-height: 20px;
+@filter-font-family: 'Open Sans Regular';
+@filter-font-size: 11px;
+@filter-color: #37474f;
+@filter-background-color: #FFCA28;
+@filter-background-color-hover: #ffb300;
+
+@control-icon-width: 22px;
+@control-icon-height: 22px;
+@control-icon-color: #90A4AE;
+@control-icon-color-hover: #78909c;
+@control-indicator-width: 14px;
+@control-indicator-height: 14px;
+@control-indicator-background-color: @filter-background-color;
+@control-indicator-border: 3px solid @search-background-color;
 
 &:host {
   display: block;
@@ -35,6 +52,36 @@
     }
   }
 
+  .filters {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: @search-height;
+    font-family: @filter-font-family;
+    font-size: @filter-font-size;
+    color: @filter-color;
+    background: @search-background-color;
+
+    .filter {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      height: @filter-height;
+      margin-right: 10px;
+      padding-left: 8px;
+      padding-right: 8px;
+      background: @filter-background-color;
+      border-radius: 24px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: @filter-background-color-hover;
+      }
+    }
+  }
+
   .input {
     display: flex;
     flex: 1;
@@ -49,10 +96,37 @@
   .controls {
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
     width: @search-height;
     width: @search-height;
     background: @search-background-color;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
+
+    .mat-icon {
+      position: relative;
+      width: @control-icon-width;
+      height: @control-icon-height;
+      font-size: @control-icon-width;
+      line-height: @control-icon-width;
+      color: @control-icon-color;
+      cursor: pointer;
+
+      &:hover {
+        color: @control-icon-color-hover;
+      }
+
+      .indicator {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        width: @control-indicator-width;
+        height: @control-indicator-height;
+        background: @control-indicator-background-color;
+        border: @control-indicator-border;
+        border-radius: 50%;
+      }
+    }
   }
 }
