--- a/projects/auto-requests/src/app/app.component.html
+++ b/projects/auto-requests/src/app/app.component.html
@@ -56,7 +56,11 @@
         </button>
       </div>
       <div class="search pl-5 pr-5">
-        <app-search [filters]="filters$ | async" (openFilters)="openFiltersDialog()"></app-search>
+        <app-search [filters]="filters$ | async"
+                    (openFilters)="openFiltersDialog()"
+                    (resetFilter)="resetFilter($event)"
+                    (searchChanged)="searchChanged($event)">
+        </app-search>
       </div>
       <div class="controls">
         <button mat-icon-button
