AUTO: Search clear added

--- a/projects/auto-requests/src/app/app.component.html
+++ b/projects/auto-requests/src/app/app.component.html
@@ -59,7 +59,8 @@
         <app-search [filters]="filters$ | async"
                     (openFilters)="openFiltersDialog()"
                     (resetFilter)="resetFilter($event)"
-                    (searchChanged)="searchChanged($event)">
+                    (searchChanged)="searchChanged($event)"
+                    (searchCleared)="searchCleared()">
         </app-search>
       </div>
       <div class="controls">
