--- a/projects/auto-requests/src/app/components/search/search.component.less
+++ b/projects/auto-requests/src/app/components/search/search.component.less
@@ -105,8 +105,8 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    width: @search-height;
-    width: @search-height;
+    // width: @search-height;
+    min-width: @search-height;
     background: @search-background-color;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
