--- a/projects/auto-requests/src/app/components/search/search.component.html
+++ b/projects/auto-requests/src/app/components/search/search.component.html
@@ -14,7 +14,14 @@
   <div class="input">
     <input type="text" formControlName="query">
   </div>
-  <div class="controls">
+  <div class="controls pl-3 pr-3">
+    <mat-icon class="mr-2"
+              *ngIf="searchForm.controls.query.value"
+              matTooltip="Очистить поиск"
+              matTooltipPosition="below"
+              (click)="onClearSearch()">
+      clear
+    </mat-icon>
     <mat-icon matTooltip="Фильтры"
               matTooltipPosition="below"
               (click)="onOpenFilters()">
