--- a/projects/auto-requests/src/app/features/requests/components/tabs/tabs.component.less
+++ b/projects/auto-requests/src/app/features/requests/components/tabs/tabs.component.less
@@ -14,6 +14,12 @@
 @indicator-color: white;
 @indicator-background-color: @title-color-selected;
 
+@control-icon-width: 26px;
+@control-icon-height: 26px;
+@control-icon-font-size: 26px;
+@control-icon-color: rgba(84, 110, 122, 0.5);
+@control-icon-color-hover: rgba(84, 110, 122, 0.7);
+
 &:host {
   display: flex;
   flex-direction: column;
@@ -80,6 +86,24 @@
         color: @indicator-color;
         background: @indicator-background-color;
         border-radius: 50%;
+      }
+    }
+  }
+
+  .controls {
+    display: flex;
+    flex-direction: row;
+    border-bottom: @border-bottom;
+
+    .mat-icon {
+      width: @control-icon-width;
+      height: @control-icon-height;
+      font-size: @control-icon-font-size;
+      color: @control-icon-color;
+      cursor: pointer;
+
+      &:hover {
+        color: @control-icon-color-hover;
       }
     }
   }
