AUTO: Request details dialog added

--- a/projects/auto-requests/src/app/features/requests/components/route-path/route-path.component.less
+++ b/projects/auto-requests/src/app/features/requests/components/route-path/route-path.component.less
@@ -17,7 +17,7 @@
 .route-path {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 100%;
 
 
