--- a/projects/auto-requests/src/app/components/edit-request-dialog/edit-request-dialog.component.html
+++ b/projects/auto-requests/src/app/components/edit-request-dialog/edit-request-dialog.component.html
@@ -84,7 +84,7 @@
         <!-- Start: Дата поездки -->
         <mat-form-field appearance="fill" class="w-100 mt-3 pr-3" floatLabel="always">
           <mat-label>Дата поездки</mat-label>
-          <input matInput formControlName="date" [min]="(date$ | async)" [matDatepicker]="picker">
+          <input matInput formControlName="date" [min]="(selectedRequest$ | async)?.startTimeD" [matDatepicker]="picker">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
