--- a/projects/auto-requests/src/app/components/request-details-dialog/request-details-dialog.component.less
+++ b/projects/auto-requests/src/app/components/request-details-dialog/request-details-dialog.component.less
@@ -97,6 +97,12 @@
         font-family: 'Open Sans Semi Bold';
         font-size: 18px;
         line-height: 18px;
+
+        .reason {
+          font-family: 'Open Sans Light';
+          font-size: 14px;
+          line-height: 14px;
+        }
       }
     }
 
