--- a/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.less
+++ b/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.less
@@ -1,6 +1,6 @@
 @placeholder-font-family: 'Open Sans Regular';
 @placeholder-font-size: 20px;
-@placeholder-color: #e0e0e0;
+@placeholder-color: #cfd8dc;
 
 :host {
   display: flex;
