--- a/projects/auto-requests/src/app/components/edit-request-dialog/edit-request-dialog.component.html
+++ b/projects/auto-requests/src/app/components/edit-request-dialog/edit-request-dialog.component.html
@@ -1,88 +1,116 @@
-<div class="add-request-container">
+<div class="sign-in-container" [formGroup]="requestForm">
 
-  <div class="side p-4">
-    <div class="label">
-      <!--<div class="subtitle">Заявки на автостранспорт</div>-->
-      <div class="title">Заявка #{{(selectedRequest$ | async)?.id}}</div>
-    </div>
+  <div class="side p-5">
 
-    <div class="d-flex flex-column justify-content-start flex-grow-1 pt-1 mt-4">
+    <img src="/assets/images/car-front.png">
+    <div class="title mt-2">Заявка #{{(selectedRequest$| async)?.id}}</div>
+    <div class="comment"> от {{(selectedRequest$| async)?.dateCreatedD | date:'dd MMMM yyyy, HH:mm'}}</div>
 
-      <!-- Start: Транспорт -->
-      <app-transport-typeahead [transport]="transport$ | async"
-                               [request]="selectedRequest$ | async"
-                               (select)="selectTransport($event)">
-      </app-transport-typeahead>
-      <!-- End: Транспорт -->
+    <div class="w-100 mt-4 flex-grow-1 d-flex flex-column justify-content-between">
+      <div>
+        <!-- Start: Транспорт -->
+        <app-transport-typeahead class="w-100"
+                                 [transport]="transport$ | async"
+                                 [request]="selectedRequest$ | async"
+                                 (select)="selectTransport($event)">
+        </app-transport-typeahead>
+        <!-- End: Транспорт -->
 
-      <!-- Start: Водитель -->
-      <app-driver-typeahead class="mt-3"
-                            [drivers]="drivers$ | async"
-                            [request]="selectedRequest$ | async"
-                            (select)="selectDriver($event)">
-      </app-driver-typeahead>
-      <!-- End: Водитель -->
+        <!-- Start: Водитель -->
+        <app-driver-typeahead class="w-100 mt-3"
+                              [drivers]="drivers$ | async"
+                              [request]="selectedRequest$ | async"
+                              (select)="selectDriver($event)">
+        </app-driver-typeahead>
+        <!-- End: Водитель -->
 
-      <!-- Start: Статус заявки -->
-      <div [formGroup]="requestForm">
-        <mat-form-field appearance="fill" class="w-100 mt-3 pt-1" floatLabel="always">
-          <mat-label>Статус заявки</mat-label>
-          <mat-icon matPrefix
-                    class="mr-3"
-                    [ngStyle]="{'color': requestForm.controls.status.value.color}">
-            {{requestForm.controls.status.value.icon}}
-          </mat-icon>
-          <mat-select formControlName="status" [compareWith]="statusCompare" (selectionChange)="selectStatus($event)" autofocus>
-            <mat-select-trigger>
-              <!--{{selectedRequest.status.title}}-->
-              {{requestForm.controls.status.value.title}}
-            </mat-select-trigger>
-            <mat-option *ngFor="let status of (statuses$ | async)" [value]="status">
-              <mat-icon class="mr-3" [ngStyle]="{'color': status.color}">{{status.icon}}</mat-icon>
-              {{status.title}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <!-- Start: Статус заявки -->
+        <div class="w-100 mt-3">
+          <mat-form-field appearance="fill" class="w-100" floatLabel="always">
+            <mat-label>Статус заявки</mat-label>
+            <mat-icon matPrefix
+                      class="mr-3"
+                      [ngStyle]="{'color': requestForm.controls.status.value.color}">
+              {{requestForm.controls.status.value.icon}}
+            </mat-icon>
+            <mat-select formControlName="status" [compareWith]="statusCompare" (selectionChange)="selectStatus($event)" autofocus>
+              <mat-select-trigger>
+                <!--{{selectedRequest.status.title}}-->
+                {{requestForm.controls.status.value.title}}
+              </mat-select-trigger>
+              <mat-option *ngFor="let status of (statuses$ | async)" [value]="status">
+                <mat-icon class="mr-3" [ngStyle]="{'color': status.color}">{{status.icon}}</mat-icon>
+                {{status.title}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <!-- End: Статус заявки -->
+
+        <!-- Start: Причина отклонения -->
+        <div class="w-100 mt-3" *ngIf="requestForm.controls.status.value.id === 3">
+          <mat-form-field appearance="fill" class="w-100" floatLabel="always">
+            <mat-label>Причина отклонения заявки</mat-label>
+            <mat-select formControlName="rejectReason" [compareWith]="reasonStatusCompare" (selectionChange)="selectRejectReason($event)" placeholder="Причина не указана">
+              <mat-select-trigger>
+                {{requestForm.controls.rejectReason.value?.title}}
+              </mat-select-trigger>
+              <mat-option *ngFor="let reason of (rejectReasons$ | async)" [value]="reason">
+                {{reason.title}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <!-- End: Причина отклонения -->
       </div>
-      <!-- End: Статус заявки -->
-    </div>
 
-    <!--<div class="comment">от {{selectedRequest.dateCreatedD | date:'dd MMMM yyyy, hh:mm'}}</div>-->
-    <button mat-raised-button
-            color="primary"
-            class="w-100 pt-2 pb-2"
-            [disabled]="(isLoading$ | async) || requestForm.invalid || selectedRequest.route.length < 2 || requestForm.pristine"
-            (click)="editRequest()">
-      Сохранить изменения
-    </button>
+      <!-- Start: Кнопка сохранения изменений -->
+      <button mat-raised-button
+              color="primary"
+              class="w-100 pt-2 pb-2"
+              [disabled]="(isLoading$ | async) || requestForm.invalid || selectedRequest.route.length < 2 || requestForm.pristine"
+              (click)="editRequest()">
+        Сохранить изменения
+      </button>
+      <!-- End: Кнопка сохранения изменений -->
+    </div>
 
   </div>
 
-  <div class="content p-4">
-    <form class="row w-100" [formGroup]="requestForm">
-
-      <div class="col-6 h-100 d-flex flex-column justify-content-between">
-
-        <caption class="w-100 mb-3">Детали поездки</caption>
+  <div class="content p-5">
+    <div class="row no-gutters w-100 h-100">
+      <div class="col-12 h-100">
 
         <!-- Start: Инициатор -->
-        <mat-form-field appearance="fill" class="w-100 mb-3 pr-3" floatLabel="always" *ngIf="selectedRequest.initiator">
-          <mat-label>Инициатор</mat-label>
-          <input matInput formControlName="initiator" readonly="true">
-          <mat-hint>{{selectedRequest.initiator?.position}}</mat-hint>
-        </mat-form-field>
+        <div class="labeled-field w-100 mb-4" *ngIf="(selectedRequest$ | async)?.initiator">
+          <div class="label">Инициатор</div>
+          <div class="value">
+            {{(selectedRequest$ | async)?.initiator
+            ? (selectedRequest$ | async).initiator.hasOwnProperty('id')
+              ?  (selectedRequest$ | async).initiator.firstName + ' ' + (selectedRequest$ | async).initiator.lastName
+              : (selectedRequest$ | async).initiator
+            : 'Не назначен'}}
+          </div>
+          <div class="description" *ngIf="initiatorPosition">
+            {{initiatorPosition}}
+          </div>
+        </div>
         <!-- End: Инициатор -->
 
         <!-- Start: Заказчик -->
-        <mat-form-field appearance="fill" class="w-100 pr-3" floatLabel="always">
-          <mat-label>Заказчик</mat-label>
-          <input matInput formControlName="user" readonly="true" #initiator>
-          <mat-hint>{{selectedRequest.user.position}}</mat-hint>
-        </mat-form-field>
+        <div class="labeled-field w-100">
+          <div class="label">Заказчик</div>
+          <div class="value">
+            {{(selectedRequest$ | async)?.user.firstName + ' ' + (selectedRequest$ | async)?.user.lastName}}
+          </div>
+          <div class="description" *ngIf="(selectedRequest$ | async)?.user?.position">
+            {{(selectedRequest$ | async)?.user.position}}
+          </div>
+        </div>
         <!-- End: Заказчик -->
 
         <!-- Start: Дата поездки -->
-        <mat-form-field appearance="fill" class="w-100 mt-3 pr-3" floatLabel="always">
+        <mat-form-field appearance="fill" class="w-100 mt-4 pr-3" floatLabel="always">
           <mat-label>Дата поездки</mat-label>
           <input matInput formControlName="date" [min]="(selectedRequest$ | async)?.startTimeD" [matDatepicker]="picker">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -110,15 +138,133 @@
           </div>
         </div>
 
+        <!-- Start: О поездке -->
+        <mat-form-field appearance="fill" class="w-100 mt-3 pr-3" floatLabel="always">
+          <mat-label>О поездке</mat-label>
+          <textarea matInput rows="2" formControlName="description"></textarea>
+          <mat-hint align="start">Цель поездки, кол-во пассажиров и т.д.</mat-hint>
+        </mat-form-field>
+        <!-- End: О поездке-->
+
+        <!-- Start: Маршрут -->
+        <div class="labeled-field w-100 mt-4">
+          <div class="label mb-3">Маршрут</div>
+          <app-route-path [routes]="(selectedRequest$ | async).route" [extended]="true"></app-route-path>
+        </div>
+        <!-- End: Маршрут -->
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+<!--
+<div class="add-request-container">
+
+  <div class="side p-4">
+    <div class="label">
+      <div class="title">Заявка #{{(selectedRequest$ | async)?.id}}</div>
+    </div>
+
+    <div class="d-flex flex-column justify-content-start flex-grow-1 pt-1 mt-4">
+
+      <app-transport-typeahead [transport]="transport$ | async"
+                               [request]="selectedRequest$ | async"
+                               (select)="selectTransport($event)">
+      </app-transport-typeahead>
+
+      <app-driver-typeahead class="mt-3"
+                            [drivers]="drivers$ | async"
+                            [request]="selectedRequest$ | async"
+                            (select)="selectDriver($event)">
+      </app-driver-typeahead>
+
+      <div [formGroup]="requestForm">
+        <mat-form-field appearance="fill" class="w-100 mt-3 pt-1" floatLabel="always">
+          <mat-label>Статус заявки</mat-label>
+          <mat-icon matPrefix
+                    class="mr-3"
+                    [ngStyle]="{'color': requestForm.controls.status.value.color}">
+            {{requestForm.controls.status.value.icon}}
+          </mat-icon>
+          <mat-select formControlName="status" [compareWith]="statusCompare" (selectionChange)="selectStatus($event)" autofocus>
+            <mat-select-trigger>
+              {{requestForm.controls.status.value.title}}
+            </mat-select-trigger>
+            <mat-option *ngFor="let status of (statuses$ | async)" [value]="status">
+              <mat-icon class="mr-3" [ngStyle]="{'color': status.color}">{{status.icon}}</mat-icon>
+              {{status.title}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <button mat-raised-button
+            color="primary"
+            class="w-100 pt-2 pb-2"
+            [disabled]="(isLoading$ | async) || requestForm.invalid || selectedRequest.route.length < 2 || requestForm.pristine"
+            (click)="editRequest()">
+      Сохранить изменения
+    </button>
+
+  </div>
+
+  <div class="content p-4">
+    <form class="row w-100" [formGroup]="requestForm">
+
+      <div class="col-6 h-100 d-flex flex-column justify-content-between">
+
+        <caption class="w-100 mb-3">Детали поездки</caption>
+
+        <mat-form-field appearance="fill" class="w-100 mb-3 pr-3" floatLabel="always" *ngIf="selectedRequest.initiator">
+          <mat-label>Инициатор</mat-label>
+          <input matInput formControlName="initiator" readonly="true">
+          <mat-hint>{{selectedRequest.initiator?.position}}</mat-hint>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="w-100 pr-3" floatLabel="always">
+          <mat-label>Заказчик</mat-label>
+          <input matInput formControlName="user" readonly="true" #initiator>
+          <mat-hint>{{selectedRequest.user.position}}</mat-hint>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="w-100 mt-3 pr-3" floatLabel="always">
+          <mat-label>Дата поездки</mat-label>
+          <input matInput formControlName="date" [min]="(selectedRequest$ | async)?.startTimeD" [matDatepicker]="picker">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
+        <div class="row pr-3">
+          <div class="col">
+            <mat-form-field appearance="fill" class="w-100 mt-3" floatLabel="always">
+              <mat-label>Отправление</mat-label>
+              <input matInput type="time" formControlName="startTime">
+            </mat-form-field>
+          </div>
+          <div class="col-auto d-flex flex-column justify-content-center align-items-center">&mdash;</div>
+          <div class="col">
+            <mat-form-field appearance="fill" class="w-100 mt-3" floatLabel="always">
+              <mat-label>Прибытие</mat-label>
+              <input matInput type="time" formControlName="endTime">
+            </mat-form-field>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-12">
-            <!-- Start: О поездке -->
             <mat-form-field appearance="fill" class="w-100 mt-3 pr-3" floatLabel="always">
               <mat-label>О поездке</mat-label>
               <textarea matInput rows="2" formControlName="description"></textarea>
               <mat-hint align="start">Цель поездки, кол-во пассажиров и т.д.</mat-hint>
             </mat-form-field>
-            <!-- End: О поездке-->
           </div>
         </div>
 
@@ -139,4 +285,5 @@
     </form>
   </div>
 </div>
+-->
 
