--- a/projects/auto-requests/src/app/components/request-details-dialog/request-details-dialog.component.html
+++ b/projects/auto-requests/src/app/components/request-details-dialog/request-details-dialog.component.html
@@ -5,7 +5,7 @@
     <img src="/assets/images/car-front.png">
 
     <div class="title mt-2">Заявка #{{(selectedRequest$| async)?.id}}</div>
-    <div class="comment"> от {{(selectedRequest$| async)?.dateCreatedD | date:'dd MMMM yyyy, hh:mm'}}</div>
+    <div class="comment"> от {{(selectedRequest$| async)?.dateCreatedD | date:'dd MMMM yyyy, HH:mm'}}</div>
 
     <div class="labeled-field w-75 mt-5">
       <div class="label">Транспорт</div>
@@ -33,8 +33,20 @@
       </mat-icon>
       <span class="status-title" [ngStyle]="{'color': (selectedRequest$ | async)?.status.color}">
           Заявка {{(selectedRequest$ | async)?.status.title.toLowerCase()}}
+        <span class="reason" *ngIf="(selectedRequest$ | async)?.status.id === 3 && (selectedRequest$ | async)?.rejectReason">
+          {{(selectedRequest$ | async)?.rejectReason?.title}}
         </span>
+      </span>
     </div>
+
+    <button mat-raised-button
+            color="warn"
+            class="w-100 p-2 mt-5"
+            [disabled]="(isLoading$ | async)"
+            *ngIf="(selectedRequest$ | async)?.status.id !== 3 && (selectedRequest$ | async)?.status.id !== 5 && (user$ | async)?.id === (selectedRequest$ | async)?.user.id"
+            (click)="cancelRequest()">
+      Отменить заявку
+    </button>
   </div>
 
 
